5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_869.log
== TEST (2019-04-11 11:06:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: ")

desconto = a * 0.05
			 
if (a > 200):
	print(a+desconto)
else :
	print(a)
-- ERROR:
File "XXXX", line 7
    desconto = a * 0.05
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: ")

desconto = a * 0.05
			 
if (a > 200):
	valor1 = (a + desconto)
	print(round(valor1, 2))
else :
	print(a)
-- ERROR:
File "XXXX", line 7
    desconto = a * 0.05
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: ")

desconto = (a * 0.05)
			 
if (a > 200):
	valor1 = (a + desconto)
	print(round(valor1, 2))
else :
	print(a)
-- ERROR:
File "XXXX", line 7
    desconto = (a * 0.05)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: ")

desconto = (a * 0.05)
			 
if (a > 200):
	valor1 = (a + desconto)
	print(round(valor1, 2))
else :
	print(a)
-- ERROR:
File "XXXX", line 7
    desconto = (a * 0.05)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:08:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: ")

b = (a * 0.05)
			 
if (a > 200):
	valor1 = (a + b)
	print(round(valor1, 2))
else :
	print(a)
-- ERROR:
File "XXXX", line 7
    b = (a * 0.05)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:09:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: ")

b = (a * 0.05)
			 
if (a > 200):
	valor1 = (a + b)
	print(round(valor1, 2))
else :
	print(round (a, 2))
-- ERROR:
File "XXXX", line 7
    b = (a * 0.05)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:12:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: "))

b = (a * 0.05)
			 
if (a >= 200):
	valor1 = (a - b)
	print(round(valor1, 2))
else :
	print(round (a, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:12:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
 
a = float(input("valor da compra: "))

b = (a * 0.05)
			 
if (a >= 200):
	valor1 = (a - b)
	print(round(valor1, 2))
else :
	print(round (a, 2))
-- EXECUTION TIME:
0.221771
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
